# caterpillars

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: build.yaml  deploy_wasm.yaml
assets/: caterpillar.json  data.json
docs/: caterpillars.d.ts  caterpillars.js  caterpillars_bg.wasm.d.ts  index.html
docs/assets/: caterpillar.json
src/: camera.rs  caterpillar.rs  collision.rs  config.rs  dynamic_config.rs  foliage.rs  main.rs  pick_events.rs  random.rs  toast.rs  ui.rs  walls.rs
