[package]
name = "caterpillars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
rand = "0.8.5"
bevy_mod_picking = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_common_assets = { version = "0.2.0", features = ["json"] }
git-version = "0.3"
build-time = "0.1"
